--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 buildscript {
+  ext.pegasusVersion = '28.3.7'
+
   apply from: './repositories.gradle'
   buildscript.repositories.addAll(project.repositories)
   dependencies {
-    classpath 'com.linkedin.pegasus:gradle-plugins:27.7.18'
+    classpath 'com.linkedin.pegasus:gradle-plugins:' + pegasusVersion
     classpath 'com.moowork.gradle:gradle-node-plugin:1.3.1'
-    classpath "com.commercehub.gradle.plugin:gradle-avro-plugin:0.8.1"
+    classpath 'com.commercehub.gradle.plugin:gradle-avro-plugin:0.8.1'
   }
 }
 
-final pegasusVersion = '27.7.18'
 project.ext.spec = [
     'product' : [
         'pegasus' : [
