build: clean up gms Dockerfile

--- a/docker/gms/Dockerfile
+++ b/docker/gms/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:8 as builder
 MAINTAINER Kerem Sahin ksahin@linkedin.com
-COPY . datahub-src
-RUN cd datahub-src && ./gradlew :gms:war:build \
-    && cp gms/war/build/libs/war.war ../gms.war && cd .. && rm -rf datahub-src
+COPY . /datahub-src
+RUN cd /datahub-src && ls && ./gradlew :gms:war:build \
+    && cp gms/war/build/libs/war.war /gms.war
 
 
 FROM openjdk:8-jre-alpine
