build: further clean up gms Dockerfile

--- a/docker/gms/Dockerfile
+++ b/docker/gms/Dockerfile
@@ -1,12 +1,10 @@
 FROM openjdk:8 as builder
-MAINTAINER Kerem Sahin ksahin@linkedin.com
 COPY . /datahub-src
-RUN cd /datahub-src && ls && ./gradlew :gms:war:build \
+RUN cd /datahub-src && ./gradlew :gms:war:build \
     && cp gms/war/build/libs/war.war /gms.war
 
 
 FROM openjdk:8-jre-alpine
-MAINTAINER Kerem Sahin ksahin@linkedin.com
 ENV DOCKERIZE_VERSION v0.6.1
 RUN apk --no-cache add curl tar \
     && curl https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-runner/9.4.20.v20190813/jetty-runner-9.4.20.v20190813.jar --output jetty-runner-9.4.20.v20190813.jar \
