--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -1,17 +1,18 @@
 name: release-tagged docker images
 on: 
-  release:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      
       - uses: docker/build-push-action@v1
         with:
-          dockerfile: ./docker/gms/Dockerfile
+          dockerfile: ./docker/mce-consumer/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: linkedin/datahub-gms
-          tags: ${{ github.ref }}
+          repository: linkedin/datahub-mce-consumer
+          tags: latest
