docs: points to docker images hosted by linkedin org (#1683)
As we're now utilize GitHub Actions to build & publish docker images to docker hub under linkedin org
Also allow overriding image tags via DATAHUB_VERSION environment variable

--- a/contrib/kubernetes/datahub/charts/datahub-gms/values.yaml
+++ b/contrib/kubernetes/datahub/charts/datahub-gms/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: keremsahin/datahub-gms
+  repository: linkedin/datahub-gms
   pullPolicy: IfNotPresent
   tag: latest
 
