--- a/docker/mce-consumer/docker-compose.yml
+++ b/docker/mce-consumer/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3.5'
 services:
   datahub-mce-consumer:
-    image: keremsahin/datahub-mce-consumer:latest
+    image: linkedin/datahub-mce-consumer:${DATAHUB_VERSION:-latest}
     hostname: datahub-mce-consumer
     container_name: datahub-mce-consumer
     ports:
