--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     classpath 'com.linkedin.pegasus:gradle-plugins:' + pegasusVersion
     classpath 'com.moowork.gradle:gradle-node-plugin:1.3.1'
     classpath 'com.commercehub.gradle.plugin:gradle-avro-plugin:0.8.1'
+    classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.1.2.RELEASE'
   }
 }
 
