build(docker): refactor ingestion docker build script (#1690)
- add "build" option to docker-compose file to simplify rebuilding of images
- move command from docker-compose.yml to Dockerfile
- add ingestion.sh script to simplify quickstart instruction and to reduce confusion

--- a/docker/ingestion/Dockerfile
+++ b/docker/ingestion/Dockerfile
@@ -1,6 +1,10 @@
 FROM openjdk:8
+
 COPY --from=python:2.7 / /
 COPY . datahub-src
 RUN cd datahub-src && ./gradlew :metadata-events:mxe-schemas:build \
     && cp -r metadata-ingestion/mce-cli . && cd metadata-ingestion/mce-cli \
     && pip install --user -r requirements.txt
+
+CMD cd datahub-src/metadata-ingestion/mce-cli \
+    && python mce_cli.py produce -d bootstrap_mce.dat -b $KAFKA_BOOTSTRAP_SERVER -s $KAFKA_SCHEMAREGISTRY_URL
