--- a/docker/ingestion/docker-compose.yml
+++ b/docker/ingestion/docker-compose.yml
@@ -2,13 +2,15 @@
 version: '3.5'
 services:
   ingestion:
-    image: ingestion
+    image: datahub-ingestion
+    build:
+      context: ../../
+      dockerfile: docker/ingestion/Dockerfile
     hostname: ingestion
     container_name: ingestion
     environment:
       - KAFKA_BOOTSTRAP_SERVER=broker:29092
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
-    command: "bash -c 'cd datahub-src/metadata-ingestion/mce-cli && python mce_cli.py produce -d bootstrap_mce.dat -b broker:29092 -s http://schema-registry:8081'"
 
 networks:
   default:
