build(docker): refactor docker build scripts (#1687)
* build(docker): refactor docker build scripts

- add "build" option to docker-compose files to simplify rebuilding of images
- create "start.sh" script so it's easier to override "command" in the quickstart's docker-compose file
- use dockerize to wait for requisite services to start up
- add a dedicated Dockerfile for kafka-setup

This fixes https://github.com/linkedin/datahub/issues/1549 & https://github.com/linkedin/datahub/issues/1550

--- a/docker/frontend/docker-compose.yml
+++ b/docker/frontend/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.5'
 services:
   datahub-frontend:
     image: linkedin/datahub-frontend:${DATAHUB_VERSION:-latest}
+    build:
+      context: ../../
+      dockerfile: docker/frontend/Dockerfile
     hostname: datahub-frontend
     container_name: datahub-frontend
     ports:
