--- a/docker/mae-consumer/docker-compose.yml
+++ b/docker/mae-consumer/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.5'
 services:
   datahub-mae-consumer:
     image: linkedin/datahub-mae-consumer:${DATAHUB_VERSION:-latest}
+    build:
+      context: ../../
+      dockerfile: docker/mae-consumer/Dockerfile
     hostname: datahub-mae-consumer
     container_name: datahub-mae-consumer
     ports:
@@ -12,6 +15,7 @@ services:
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
       - ELASTICSEARCH_HOST=elasticsearch
       - ELASTICSEARCH_PORT=9200
+      - NEO4J_HOST=neo4j:7474
       - NEO4J_URI=bolt://neo4j
       - NEO4J_USERNAME=neo4j
       - NEO4J_PASSWORD=datahub
