--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -80,22 +80,16 @@ services:
 
   # This "container" is a workaround to pre-create topics
   kafka-setup:
-    image: confluentinc/cp-kafka:5.4.0
+    build:
+      context: ../kafka
     hostname: kafka-setup
     container_name: kafka-setup
     depends_on:
       - broker
       - schema-registry
-    command: "bash -c 'echo Waiting for Kafka to be ready... && \
-                       cub kafka-ready -b broker:29092 1 60 && \
-                       kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --partitions 1 --replication-factor 1 --topic MetadataAuditEvent && \
-                       kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --partitions 1 --replication-factor 1 --topic MetadataChangeEvent && \
-                       kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --partitions 1 --replication-factor 1 --topic FailedMetadataChangeEvent'"
     environment:
-      # The following settings are listed here only to satisfy the image's requirements.
-      # We override the image's `command` anyways, hence this container will not start a broker.
-      KAFKA_BROKER_ID: ignored
-      KAFKA_ZOOKEEPER_CONNECT: ignored
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_BOOTSTRAP_SERVER=broker:29092
 
   schema-registry:
     image: confluentinc/cp-schema-registry:5.4.0
@@ -191,18 +185,15 @@ services:
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
       - ELASTICSEARCH_HOST=elasticsearch
       - ELASTICSEARCH_PORT=9200
+      - NEO4J_HOST=neo4j:7474
       - NEO4J_URI=bolt://neo4j
       - NEO4J_USERNAME=neo4j
       - NEO4J_PASSWORD=datahub
     depends_on:
-      - elasticsearch
-      - broker
+      - elasticsearch-setup
+      - kafka-setup
       - mysql
-      - schema-registry
       - neo4j
-    command: "sh -c 'dockerize -wait tcp://mysql:3306 -wait tcp://broker:29092 -wait http://elasticsearch:9200 \
-                                   -timeout 240s \
-                                   java -jar jetty-runner-9.4.20.v20190813.jar gms.war'"
 
   datahub-frontend:
     image: linkedin/datahub-frontend:${DATAHUB_VERSION:-latest}
@@ -230,23 +221,23 @@ services:
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
       - ELASTICSEARCH_HOST=elasticsearch
       - ELASTICSEARCH_PORT=9200
+      - NEO4J_HOST=neo4j:7474
       - NEO4J_URI=bolt://neo4j
       - NEO4J_USERNAME=neo4j
       - NEO4J_PASSWORD=datahub
     depends_on:
       - kafka-setup
-      - elasticsearch
+      - elasticsearch-setup
       - neo4j
     command: "sh -c 'while ping -c1 kafka-setup &>/dev/null; do echo waiting for kafka-setup... && sleep 1; done; \
-              echo kafka-setup done! && \
-              dockerize -wait http://neo4j:7474 -timeout 240s && java -jar mae-consumer-job.jar'"
+                  echo kafka-setup done! && /start.sh'"
 
   datahub-mce-consumer:
     image: linkedin/datahub-mce-consumer:${DATAHUB_VERSION:-latest}
     hostname: datahub-mce-consumer
     container_name: datahub-mce-consumer
     ports:
-        - "9090:9090"
+      - "9090:9090"
     environment:
       - KAFKA_BOOTSTRAP_SERVER=broker:29092
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
@@ -256,7 +247,7 @@ services:
       - kafka-setup
       - datahub-gms
     command: "sh -c 'while ping -c1 kafka-setup &>/dev/null; do echo waiting for kafka-setup... && sleep 1; done; \
-                  echo kafka-setup done! && java -jar mce-consumer-job.jar'"
+                  echo kafka-setup done! && /start.sh'"
 
 networks:
   default:
