--- a/metadata-events/mxe-utils-avro-1.7/build.gradle
+++ b/metadata-events/mxe-utils-avro-1.7/build.gradle
@@ -1,27 +1,17 @@
 apply plugin: 'java'
 
-configurations {
-  avroOriginal
-}
-
 dependencies {
   compile project(':metadata-events:mxe-avro-1.7')
-  compile project(':metadata-models')
+  compile project(':metadata-models-ext')
   compile spec.product.pegasus.dataAvro1_6
 
   testCompile project(':metadata-dao')
   testCompile project(':metadata-testing:metadata-test-utils')
-
-  avroOriginal project(path: ':metadata-models', configuration: 'avroSchema')
 }
 
-// copy original MXE avro schema from metadata-models to resources
-task copyOriginalMXESchemas(type: Copy) {
-  dependsOn configurations.avroOriginal
-
-  from { // use of closure defers evaluation until execution time
-    configurations.avroOriginal.collect { zipTree(it) }
-  }
+// copy original MXE avro schema from metadata-events to resources
+task copyOriginalMXESchemas(type: Copy, dependsOn: ':metadata-events:mxe-schemas:build') {
+  from("../mxe-schemas/src/mainGeneratedAvroSchema/")
   into("src/main/resources/")
   include("avro/com/linkedin/mxe/")
 }
