--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,8 @@ include 'metadata-events:mxe-utils-avro-1.7'
 include 'metadata-jobs:mae-consumer-job'
 include 'metadata-jobs:mce-consumer-job'
 include 'metadata-models'
+include 'metadata-models-ext'
+include 'metadata-models-generator'
 include 'metadata-restli-resource'
 include 'metadata-testing:metadata-test-models'
 include 'metadata-testing:metadata-test-utils'
