--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ project.ext.spec = [
             'd2' : 'com.linkedin.pegasus:d2:' + pegasusVersion,
             'data' : 'com.linkedin.pegasus:data:' + pegasusVersion,
             'dataAvro1_6' : 'com.linkedin.pegasus:data-avro-1_6:' + pegasusVersion,
+            'generator': 'com.linkedin.pegasus:generator:' + pegasusVersion,
             'restliCommon' : 'com.linkedin.pegasus:restli-common:' + pegasusVersion,
             'restliClient' : 'com.linkedin.pegasus:restli-client:' + pegasusVersion,
             'restliServer' : 'com.linkedin.pegasus:restli-server:' + pegasusVersion,
@@ -27,6 +28,7 @@ project.ext.spec = [
 
 project.ext.externalDependency = [
     'avro_1_7': 'org.apache.avro:avro:1.7.7',
+    'avroCompiler_1_7': 'org.apache.avro:avro-compiler:1.7.7',
     'cacheApi' : 'javax.cache:cache-api:1.1.0',
     'commonsIo': 'commons-io:commons-io:2.4',
     'commonsLang': 'commons-lang:commons-lang:2.6',
@@ -62,12 +64,14 @@ project.ext.externalDependency = [
     'playGuice': 'com.typesafe.play:play-guice_2.11:2.6.18',
     'playJavaJdbc': 'com.typesafe.play:play-java-jdbc_2.11:2.6.18',
     'playTest': 'com.typesafe.play:play-test_2.11:2.6.18',
+    'reflections': 'org.reflections:reflections:0.9.11',
+    "rythmEngine": "org.rythmengine:rythm-engine:1.3.0",
     'servletApi': 'javax.servlet:javax.servlet-api:3.1.0',
-    'springBeans': 'org.springframework:spring-beans:5.1.6.RELEASE',
-    'springContext': 'org.springframework:spring-context:5.1.6.RELEASE',
-    'springCore': 'org.springframework:spring-core:5.1.6.RELEASE',
-    'springJdbc': 'org.springframework:spring-jdbc:5.1.6.RELEASE',
-    'springWeb': 'org.springframework:spring-web:5.1.6.RELEASE',
+    'springBeans': 'org.springframework:spring-beans:5.2.3.RELEASE',
+    'springContext': 'org.springframework:spring-context:5.2.3.RELEASE',
+    'springCore': 'org.springframework:spring-core:5.2.3.RELEASE',
+    'springJdbc': 'org.springframework:spring-jdbc:5.2.3.RELEASE',
+    'springWeb': 'org.springframework:spring-web:5.2.3.RELEASE',
     'springBootStarterWeb': 'org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE',
     'springBootStarterJetty': 'org.springframework.boot:spring-boot-starter-jetty:2.1.2.RELEASE',
     'springKafka': 'org.springframework.kafka:spring-kafka:2.2.3.RELEASE',
