--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.daemon=true
+org.gradle.daemon=false
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 org.gradle.caching=false
