--- a/metadata-events/mxe-schemas/build.gradle
+++ b/metadata-events/mxe-schemas/build.gradle
@@ -1,23 +1,36 @@
 apply plugin: 'java'
+apply plugin: 'pegasus'
 
-
-task copyOriginalAvsc(type: Copy, dependsOn: ':metadata-models:build') {
-  from("../../metadata-models/src/mainGeneratedAvroSchema/avro")
-  into file("src/original/avro")
+dependencies {
+  dataModel project(path: ':li-utils', configuration: 'dataTemplate')
 }
 
-task copyRenamedAvsc(type: Copy, dependsOn: copyOriginalAvsc) {
-  from("src/original/avro")
+task copyGeneratedPdl(type: Copy, dependsOn: ':metadata-models-ext:build') {
+  from("../../metadata-models-ext/src/mainGeneratedPdl/pegasus/com/linkedin/mxe")
+  into file("src/main/pegasus/com/linkedin/mxe")
+}
+
+task copyMetadataModels(type: Copy, dependsOn: copyGeneratedPdl) {
+  from("../../metadata-models/src/main/pegasus/")
+  into file("src/main/pegasus")
+}
+
+generateAvroSchema.dependsOn copyMetadataModels
+pegasus.main.generationModes = [PegasusGenerationMode.PEGASUS, PegasusGenerationMode.AVRO]
+
+task copyOriginalAvsc(type: Copy, dependsOn: generateAvroSchema) {
+  from("src/mainGeneratedAvroSchema/avro")
   into file("src/renamed/avro")
 }
 
-task renameNamespace(type: Exec, dependsOn: copyRenamedAvsc) {
-  commandLine './rename-namespace.sh'
+task renameNamespace(type: Exec, dependsOn: copyOriginalAvsc) {
+  commandLine 'sh', './rename-namespace.sh'
 }
 
 build.dependsOn renameNamespace
 
 clean {
-  project.delete('src/original/avro')
+  project.delete('src/main/pegasus')
+  project.delete('src/mainGeneratedAvroSchema/avro')
   project.delete('src/renamed/avro')
 }
