fix: add missing neo4j.host helm var (#1698)
Co-authored-by: jsotelo <javier.sotelo@viasat.com>

--- a/contrib/kubernetes/datahub/charts/datahub-gms/templates/configmap.yaml
+++ b/contrib/kubernetes/datahub/charts/datahub-gms/templates/configmap.yaml
@@ -12,4 +12,5 @@ data:
   kafka.schemaregistry.url: "{{ .Values.global.kafka.schemaregistry.url }}"
   elasticsearch.host: "{{ .Values.global.elasticsearch.host }}"
   elasticsearch.port: "{{ .Values.global.elasticsearch.port }}"
+  neo4j.host: "{{ .Values.global.neo4j.host }}"
   neo4j.uri: "{{ .Values.global.neo4j.uri }}"
