--- a/contrib/kubernetes/datahub/charts/datahub-gms/templates/deployment.yaml
+++ b/contrib/kubernetes/datahub/charts/datahub-gms/templates/deployment.yaml
@@ -81,6 +81,11 @@ spec:
                 configMapKeyRef:
                   name: {{ include "datahub-gms.fullname" . }}-configmap
                   key: elasticsearch.port
+            - name: NEO4J_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "datahub-gms.fullname" . }}-configmap
+                  key: neo4j.host
             - name: NEO4J_URI
               valueFrom:
                 configMapKeyRef:
