--- a/contrib/kubernetes/datahub/charts/datahub-mae-consumer/templates/deployment.yaml
+++ b/contrib/kubernetes/datahub/charts/datahub-mae-consumer/templates/deployment.yaml
@@ -52,6 +52,11 @@ spec:
                 configMapKeyRef:
                   name: datahub-gms-deployment-configmap
                   key: elasticsearch.port
+            - name: NEO4J_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: datahub-gms-deployment-configmap
+                  key: neo4j.host
             - name: NEO4J_URI
               valueFrom:
                 configMapKeyRef:
