--- a/metadata-ingestion/tests/integration/postgres/postgres_to_file_with_db_estimate_row_count.yml
+++ b/metadata-ingestion/tests/integration/postgres/postgres_to_file_with_db_estimate_row_count.yml
@@ -12,8 +12,8 @@ source:
       profile_table_level_only: true
       profile_table_row_count_estimate_only: true
       turn_off_expensive_profiling_metrics: true
-      include_field_null_count: false
-      include_field_distinct_count: false
+      include_field_null_count: true
+      include_field_distinct_count: true
       include_field_min_value: false
       include_field_max_value: false
       include_field_mean_value: false
