fix(async): submit additional default aspects only when not in async mode (#8320)

--- a/settings.gradle
+++ b/settings.gradle
@@ -59,3 +59,5 @@ include 'metadata-auth:auth-api'
 include 'metadata-service:schema-registry-api'
 include 'metadata-service:schema-registry-servlet'
 include 'metadata-integration:java:examples'
+include 'mock-entity-registry'
+
